[gd_scene load_steps=6 format=3 uid="uid://d16joiixx0tj1"]

[ext_resource type="Texture2D" uid="uid://bopi3hl1hd56c" path="res://Assets/Personals/backgroundCredits.png" id="1_u1uau"]
[ext_resource type="Script" path="res://Scenes/new_game.gd" id="1_urjb1"]

[sub_resource type="FontFile" id="FontFile_krg46"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aykup"]
bg_color = Color(0.555361, 0.576237, 0.822159, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tc5bt"]
line_spacing = 6.0
font_size = 25
outline_size = 1

[node name="NewGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_urjb1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.897
anchor_bottom = 0.249
offset_left = 100.0
offset_top = -398.0
offset_right = 301.76
offset_bottom = 373.08
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_u1uau")
expand_mode = 3

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Background"]
position = Vector2(379, 260)
remote_path = NodePath("../Titre/Camera2D")

[node name="Titre" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -228.0
offset_top = 309.0
offset_right = 279.0
offset_bottom = 359.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_krg46")
theme_override_styles/normal = SubResource("StyleBoxFlat_aykup")
text = "Nouvelle partie"
label_settings = SubResource("LabelSettings_tc5bt")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Camera2D" type="Camera2D" parent="Background/Titre"]
position = Vector2(-355, -49)
offset = Vector2(410, 200)
zoom = Vector2(0.4, 0.4)

[node name="VBoxContainer" type="VBoxContainer" parent="Background/Titre"]
layout_mode = 0
offset_left = 115.0
offset_top = 81.0
offset_right = 415.0
offset_bottom = 249.0

[node name="Niveau1" type="Button" parent="Background/Titre/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Niveau 1"

[node name="Niveau2" type="Button" parent="Background/Titre/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Niveau 2"

[node name="Retour" type="Button" parent="Background/Titre/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Retour
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -6.0
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1057, 228)
zoom = Vector2(0.4, 0.4)

[connection signal="pressed" from="Background/Titre/VBoxContainer/Niveau1" to="." method="_on_niveau_1_pressed_level1"]
[connection signal="pressed" from="Background/Titre/VBoxContainer/Niveau2" to="." method="_on_niveau_2_pressed_level2"]
[connection signal="pressed" from="Background/Titre/VBoxContainer/Retour" to="." method="_on_retour_pressed_back_to_menu"]
